[gd_scene load_steps=7 format=3 uid="uid://l8pquanc1uck"]

[ext_resource type="Script" path="res://Slime.gd" id="1_0n0gu"]
[ext_resource type="AudioStream" uid="uid://dso5id3a076wh" path="res://sounds/hitHurt_slime2.wav" id="2_m3q11"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_lns3g"]
friction = 0.0

[sub_resource type="SpriteFrames" id="SpriteFrames_fv2jn"]
animations = [{
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7x1rn"]
radius = 4.75
height = 12.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wpk1a"]
bg_color = Color(1, 0.192157, 0, 1)

[node name="Slime" type="RigidBody2D"]
collision_layer = 4
collision_mask = 36
mass = 0.01
physics_material_override = SubResource("PhysicsMaterial_lns3g")
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_0n0gu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_fv2jn")
animation = &"new_animation"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
rotation = 1.5708
scale = Vector2(4, 4)
shape = SubResource("CapsuleShape2D_7x1rn")
debug_color = Color(0.4, 0.47451, 0.980392, 0.419608)

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
monitoring = false

[node name="HP_bar" type="ProgressBar" parent="."]
offset_left = -29.0
offset_top = 32.0
offset_right = 29.0
offset_bottom = 36.0
theme_override_styles/fill = SubResource("StyleBoxFlat_wpk1a")
rounded = true
show_percentage = false

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
radius = 500.0
avoidance_layers = 4
avoidance_mask = 4

[node name="NavTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="hurt_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_m3q11")

[connection signal="body_entered" from="hurtbox" to="." method="player_body_entered"]
[connection signal="timeout" from="NavTimer" to="." method="_on_nav_timer_timeout"]
